--- a/productDetails.html
+++ b/productDetails.html
@@ -37,7 +37,7 @@
             <a href="product.html" class="nav-link">Shop</a>
           </li>
           <li class="nav-item">
-            <a href="#terms" class="nav-link">Terms</a>
+            <a href="terms.html" class="nav-link">Terms</a>
           </li>
           <li class="nav-item">
             <a href="#about" class="nav-link">About</a>
